fix: wrong colors, pages without router and routes alias on ts

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -2,16 +2,16 @@
 :root {
   --primary-color: #75ead4;
 
-  --box-shadow-color: #110e15;
+  --box-shadow-color: rgba(17, 14, 21, 0.25);
 
   --background-color-opacity: rgba(0, 0, 0, 0.8);
 
   --text-color-primary: #f5f2fa;
   --text-color-secondary: #d1cae0;
 
-  --background-color-primary: #2e293a;
+  --background-color-primary: #1c1823;
   --background-color-secondary: #9f93b8;
-  --background-color-ternary: #1c1823;
+  --background-color-ternary: #2e293a;
 
   --button-background-color-primary: #453d53;
 }
